--- a/src/components/ContainerOfInformationLogement/style.scss
+++ b/src/components/ContainerOfInformationLogement/style.scss
@@ -11,7 +11,6 @@ ul {
   list-style: none;
 }
 .containerLogementInfo{
-  outline: 1px solid black;
   font-size:18px;
   display: flex;
   justify-content: space-between;
